--- a/source/Makefile
+++ b/source/Makefile
@@ -4,7 +4,7 @@ LD = g++ -L /usr/local/lib
 
 LIBS = -lz -lboost_filesystem -lboost_system -lopenblas -lpthread
 CFLAG = -fopenmp -std=c++11 -O3 -mavx -msse -msse2 -mavx2
-INCLU = 
+INCLU = -I /home/kuangdi/downloads/eigen/eigen-eigen-5a0156e40feb
 
 
 default: all
